<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">GPA Calculator</string>
    <string name="about_activity_label">About</string>
    <string name="edit_sheet_activity_label">Edit Sheet</string>
    <string name="edit_sheet_menu_item">Edit Sheet</string>
    <string name="about_menu_item">About</string>
    <string name="exit_menu_item">Exit</string>
    <string name="editSheetHelpText">Edit the grade sheet according to your university/school grading system.
        Just click on the points below to change the point of your respective grades according to your need.
    </string>
    <string name="gradeLabel">Grade</string>
    <string name="gpaLabel">Point</string>
    <string name="reset_menu_item">Reset</string>
    <string name="typeLabel">Type</string>
    <string name="creditLabel">Credit</string>
    <string name="calculateBtnLabel">Calculate</string>
    <string name="clear_menu_item">Clear</string>
    <string name="addButtonLabel">Add</string>
    <string name="subInputLabel">SUB</string>
    <string name="labInputLabel">LAB</string>
    <string name="refresh_menu_item">Refresh</string>
    <string name="closeButtonLabel">Close</string>
    <string name="version">Version: 1.0</string>
    <string name="license">License: MIT</string>
    <string name="director"><b>Project Director: </b> Sakib Khan Inan</string>
    <string name="directorEmail"><b>Email:</b> sakib.khaninan@hotmail.com</string>
    <string name="developer"><b>Project Developer:</b> Rizwan Hasan</string>
    <string name="developerEmail"><b>Email:</b> rizwan.hasan486@gmail.com</string>
    <string name="logoContributor"><b>Logo Designer:</b> Md. Raihan Chowdhoury</string>
    <string name="logoContributorEmail"><b>Email:</b> raihan.chowdhoury.raju@gmail.com</string>
    <string name="testerInfo"><b>Thanks to our testing team:</b>
        \n\t\t Asmita Das Gupta
        \n\t\t Mahmudul Islam
        \n\t\t Rubaiath-E-Ulfath
        \n\t\t Sal-sabil Rahat
        \n\t\t Shaon Indrajit Barua
        \n\t\t Syed Mohammed Farhan
    </string>
    <string name="communityName">Magpie-Robins</string>
</resources>
