<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/actionClear"
          android:title="@string/clear_menu_item"
          android:icon="@drawable/ic_clear"
          app:showAsAction="always"
          tools:ignore="AlwaysShowAction"/>

    <item android:id="@+id/actionRefresh"
          android:title="@string/refresh_menu_item"
          android:icon="@drawable/ic_refresh"
          app:showAsAction="always"
          tools:ignore="AlwaysShowAction"/>

    <item android:id="@+id/actionEditSheet"
          android:title="@string/edit_sheet_menu_item"
          app:showAsAction="never"/>

    <item android:id="@+id/actionAbout"
          android:title="@string/about_menu_item"
          app:showAsAction="never"/>

    <item android:id="@+id/actionExit"
          android:title="@string/exit_menu_item"
          app:showAsAction="never"/>

</menu>