<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutActivity" android:id="@+id/constriantLayout1">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="145dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/constraintLayout3"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/scrollView2">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:fontFamily="sans-serif-medium"
                android:textSize="20sp"
                android:textColor="@color/aboutLabelColor"
                android:id="@+id/editText3"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintBottom_toTopOf="@+id/editText5"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license"
                android:fontFamily="sans-serif-medium"
                android:textSize="20sp"
                android:textColor="@color/aboutLabelColor"
                android:id="@+id/editText5"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView6"/>
        <ImageView
                android:layout_width="215dp"
                android:layout_height="125dp" app:srcCompat="@drawable/about_icon" android:id="@+id/imageView6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                tools:ignore="ContentDescription"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="26sp"
                android:textColor="@color/aboutLabelColor"
                android:id="@+id/editText2" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/editText3"
                android:layout_marginTop="24dp"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                android:layout_marginBottom="8dp"/>
    </android.support.constraint.ConstraintLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="450dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/scrollView2"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView"/>
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>