<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">


    <LinearLayout android:id="@+id/linearLayout5"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center" app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
                  tools:ignore="MissingConstraints"
                  app:layout_constraintBottom_toTopOf="@+id/linearLayout6">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/typeLabel"
                android:textStyle="bold"
                android:textColor="@color/gradeListViewLabelColor"
                android:textSize="26sp"
                android:focusable="false"
                android:ems="10"
                android:backgroundTint="@color/gradeListViewLabelColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:ignore="Autofill,LabelFor,TextFields,UnusedAttribute"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/gradeLabel"
                android:textStyle="bold"
                android:textColor="@color/gradeListViewLabelColor"
                android:textSize="26sp"
                android:focusable="false"
                android:ems="10"
                android:backgroundTint="@color/gradeListViewLabelColor"
                android:layout_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:ignore=",Autofill,LabelFor,TextFields,UnusedAttribute"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/creditLabel"
                android:textStyle="bold"
                android:textColor="@color/gradeListViewLabelColor"
                android:textSize="26sp"
                android:focusable="false"
                android:ems="10"
                android:backgroundTint="@color/gradeListViewLabelColor"
                android:layout_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:ignore="Autofill,LabelFor,TextFields,UnusedAttribute"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5" android:id="@+id/linearLayout6"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout7">

        <ListView android:id="@+id/subjectListView"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:id="@+id/linearLayout7" tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6">
        <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Name"
                android:ems="10"
                android:id="@+id/editText"/>
        <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Name"
                android:ems="10"
                android:id="@+id/editText2"/>
        <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Name"
                android:ems="10"
                android:id="@+id/editText3"/>
        <Button
                android:text="Button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/button2"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/linearLayout8"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toBottomOf="parent">
        <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Name"
                android:ems="10"
                android:id="@+id/editText4"/>
        <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Name"
                android:ems="10"
                android:id="@+id/editText5"/>
        <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Name"
                android:ems="10"
                android:id="@+id/editText6"/>
        <Button
                android:text="Button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/button3"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>